Revert "Import various updates (#15)"
This reverts commit e19fd4e99f0c0e34f2c208b1f411e89d9f6a1da7.