@@ -17,6 +17,7 @@ import java.time.Duration;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 /**
  * @author i.fernandez@nchain.com
@@ -49,7 +50,7 @@ public class P2PRequestHandler {
         public abstract Event buildRequest();
         // This method publishes the Request to the Bus
         public void submit() {
-            eventBus.publish(buildRequest());
+             eventBus.publish(buildRequest());
         }
     }
 
@@ -62,7 +63,7 @@ public class P2PRequestHandler {
     }
 
     /** A Builder for DisconnectPeerRequest */
-    public  class DisconnectPeerRequestBuilder extends RequestBuilder {
+   public  class DisconnectPeerRequestBuilder extends RequestBuilder {
         private PeerAddress peerAddress;
         private DisconnectedReason reason;
 
@@ -124,63 +125,22 @@ public class P2PRequestHandler {
         }
     }
 
-    /** A Builder for WhitelistPeerRequest */
+    /**
+     * A Builder for WhitelistPeerRequest
+     */
     public class WhitelistPeerRequestBuilder extends RequestBuilder {
-        private InetAddress address;
+        private final InetAddress address;
 
-        public WhitelistPeerRequestBuilder(InetAddress peerAddress) {
-            this.address = peerAddress;
+        public WhitelistPeerRequestBuilder(PeerAddress peerAddress) {
+            this.address = peerAddress.getIp();
+        }
+
+        public WhitelistPeerRequestBuilder(InetAddress address) {
+            this.address = address;
         }
 
         public WhitelistPeerRequest buildRequest() {
             return new WhitelistPeerRequest(address);
-        }
-    }
-
-    /**
-     * A Builder for RemovePeerFromWhitelistRequest
-     */
-    public class RemovePeerFromWhitelistRequestBuilder extends RequestBuilder {
-        private final InetAddress address;
-
-        public RemovePeerFromWhitelistRequestBuilder(PeerAddress peerAddress) {
-            this.address = peerAddress.getIp();
-        }
-
-        public RemovePeerFromWhitelistRequestBuilder(InetAddress address) {
-            this.address = address;
-        }
-
-        public RemovePeerFromWhitelistRequest buildRequest() {
-            return new RemovePeerFromWhitelistRequest(address);
-        }
-    }
-
-    /**
-     * A Builder for ClearWhitelistRequest
-     */
-    public class ClearWhitelistRequestBuilder extends RequestBuilder {
-        public ClearWhitelistRequest buildRequest() {
-            return new ClearWhitelistRequest();
-        }
-    }
-
-    /**
-     * A Builder for RemovePeerFromBlacklistRequest
-     */
-    public class RemovePeerFromBlacklistRequestBuilder extends RequestBuilder {
-        private final InetAddress address;
-
-        public RemovePeerFromBlacklistRequestBuilder(PeerAddress peerAddress) {
-            this.address = peerAddress.getIp();
-        }
-
-        public RemovePeerFromBlacklistRequestBuilder(InetAddress address) {
-            this.address = address;
-        }
-
-        public RemovePeerFromBlacklistRequest buildRequest() {
-            return new RemovePeerFromBlacklistRequest(address);
         }
     }
 
@@ -256,27 +216,15 @@ public class P2PRequestHandler {
         public BlacklistPeerRequestBuilder blacklist(InetAddress address) {
             return new BlacklistPeerRequestBuilder(address);
         }
-        public RemovePeerFromBlacklistRequestBuilder removeFromBlacklist(InetAddress address) {
-            return new RemovePeerFromBlacklistRequestBuilder(address);
+        public WhitelistPeerRequestBuilder whitelist(InetAddress address) {
+            return new WhitelistPeerRequestBuilder(address);
         }
         public ClearBlacklistRequestBuilder clearBlacklist() {
             return new ClearBlacklistRequestBuilder();
         }
-
         public EnablePeerBigMessagesRequestBuilder enableBigMessages(PeerAddress peerAddress) {
             return new EnablePeerBigMessagesRequestBuilder(peerAddress);
         }
-
-        public WhitelistPeerRequestBuilder whitelist(InetAddress address) {
-            return new WhitelistPeerRequestBuilder(address);
-        }
-
-        public RemovePeerFromWhitelistRequestBuilder removeFromWhitelist(InetAddress address) {
-            return new RemovePeerFromWhitelistRequestBuilder(address);
-        }
-
-        public ClearWhitelistRequestBuilder clearWhitelist() { return new ClearWhitelistRequestBuilder();}
-
         public EnablePeerBigMessagesRequestBuilder enableBigMessages(String peerAddressStr) {
             try {
                 return new EnablePeerBigMessagesRequestBuilder(PeerAddress.fromIp(peerAddressStr));
@@ -388,34 +336,19 @@ public class P2PRequestHandler {
      */
     public class BlocksDownloadRequestBuilder {
         public BlocksToDownloadRequestBuilder download(String blockHash) {
-            return new BlocksToDownloadRequestBuilder(List.of(blockHash), false);
+            return new BlocksToDownloadRequestBuilder(Arrays.asList(blockHash), false);
         }
         public BlocksToDownloadRequestBuilder download(List<String> blockHashes) {
             return new BlocksToDownloadRequestBuilder(blockHashes, false);
         }
         public BlocksToDownloadRequestBuilder downloadWithPriority(String blockHash) {
-            return new BlocksToDownloadRequestBuilder(List.of(blockHash), true);
+            return new BlocksToDownloadRequestBuilder(Arrays.asList(blockHash), true);
         }
         public BlocksToDownloadRequestBuilder downloadWithPriority(List<String> blockHashes) {
             return new BlocksToDownloadRequestBuilder(blockHashes, true);
         }
-
-        public BlocksToDownloadRequestBuilder forceDownload(String blockHash) {
-            return new BlocksToDownloadRequestBuilder(List.of(blockHash), false).forceDownload();
-        }
-        public BlocksToDownloadRequestBuilder forceDownload(List<String> blockHashes) {
-            return new BlocksToDownloadRequestBuilder(blockHashes, false).forceDownload();
-        }
-
-        public BlocksToDownloadRequestBuilder forceDownloadWithPriority(String blockHash) {
-            return new BlocksToDownloadRequestBuilder(List.of(blockHash), true).forceDownload();
-        }
-        public BlocksToDownloadRequestBuilder forceDownloadWithPriority(List<String> blockHashes) {
-            return new BlocksToDownloadRequestBuilder(blockHashes, true).forceDownload();
-        }
-
         public BlocksToCancelDownloadRequestBuilder cancelDownload(String blockHash) {
-            return new BlocksToCancelDownloadRequestBuilder(List.of(blockHash));
+            return new BlocksToCancelDownloadRequestBuilder(Arrays.asList(blockHash));
         }
         public BlocksToCancelDownloadRequestBuilder cancelDownload(List<String> blockHashes) {
             return new BlocksToCancelDownloadRequestBuilder(blockHashes);
@@ -434,18 +367,12 @@ public class P2PRequestHandler {
     public class BlocksToDownloadRequestBuilder extends RequestBuilder {
         private List<String> blockHash;
         private boolean withPriority;
-        private boolean forceDownload;
         private PeerAddress fromThisPeerOnly;
         private PeerAddress fromThisPeerPreferably;
 
         public BlocksToDownloadRequestBuilder(List<String> blockHash, boolean withPriority)   {
             this.blockHash = blockHash;
             this.withPriority = withPriority;
-        }
-
-        public BlocksToDownloadRequestBuilder forceDownload() {
-            this.forceDownload = true;
-            return this;
         }
 
         public BlocksToDownloadRequestBuilder fromThisPeerOnly(PeerAddress fromThisPeerOnly) {
@@ -469,7 +396,7 @@ public class P2PRequestHandler {
         }
 
         public BlocksDownloadRequest buildRequest() {
-            return new BlocksDownloadRequest(blockHash, withPriority, forceDownload, fromThisPeerOnly, fromThisPeerPreferably);
+            return new BlocksDownloadRequest(blockHash, withPriority, fromThisPeerOnly, fromThisPeerPreferably);
         }
     }
 
